--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -3,32 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".todos.ListTaskActivity">
+    xmlns:tool="http://schemas.android.com/apk/res-auto">
+
 
     <RelativeLayout
-        android:id="@+id/ralativeLayout_search_box"
-        android:layout_width="wrap_content"
+        android:id="@+id/relativeLayout_search_box"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp">
+        android:layout_margin="5dp"
+        android:background="@drawable/wireframe_background">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_action_search"/>
+            android:src="@drawable/ic_action_search"
+            android:contentDescription="Search Icon"/>
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:inputType="text"
+            android:hint="@string/search"/>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textView_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/relativeLayout_search_box"
+        tools:text="Error"/>
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"/>
+        android:layout_below="@+id/relativeLayout_search_box" />
 </RelativeLayout>
