--- a/app/src/main/res/layout/activity_add_to_do_task.xml
+++ b/app/src/main/res/layout/activity_add_to_do_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddToDoTask">
+    tools:context=".addTo.AddToDoTask">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,7 +12,6 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="-21dp"
         android:orientation="horizontal">
-        />
     </RelativeLayout>
 
     <android.support.v7.widget.Toolbar
@@ -20,7 +19,7 @@
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@mipmap/crop"
+        android:background="@drawable/crop"
         >
         <TextView
             android:layout_width="match_parent"
@@ -161,22 +160,27 @@
 
 
     <Button
-        android:layout_width="wrap_content"
         android:id="@+id/btncontinue"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="90dp"
-        android:layout_alignParentBottom="true"
-        android:text="Continue"/>
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="90dp"
-        android:id="@+id/cancel"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:onClick="cancel"
-        android:text="Cancel"/>
+        android:layout_alignParentStart="true"
+
+        android:layout_marginBottom="27dp"
+        android:layout_marginStart="50dp"
+        android:background="@color/colorPrimary"
+        android:text="Save"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/viewAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btncontinue"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="40dp"
+        android:background="@color/colorPrimary"
+        android:text="view Tasks"
+        android:textSize="20sp" />
 
 </RelativeLayout>
