--- a/app/src/main/res/layout/activity_add_to_do_task.xml
+++ b/app/src/main/res/layout/activity_add_to_do_task.xml
@@ -117,23 +117,11 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginRight="-90dp"
                 android:layout_marginBottom="0dp"
-                android:text="Starting Date"
+                android:text="Due Date"
                 android:textColor="#000"
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textdeadline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="240dp"
-                android:layout_marginTop="58dp"
-                android:text="Deadline"
-                android:textColor="#000"
-                android:textSize="17dp"
-                android:textStyle="bold" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
     <TextView
@@ -181,6 +169,6 @@
         android:layout_marginEnd="40dp"
         android:background="@color/colorPrimary"
         android:text="view Tasks"
-        android:textSize="20sp" />
+        android:textSize="17sp" />
 
 </RelativeLayout>
