Update: List task with sub-tasks and countdown timer

--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -16,66 +17,58 @@
             android:layout_height="match_parent"
             android:layout_margin="3dp">
 
-            <TextView
-                android:id="@+id/textView_task_name"
+            <LinearLayout
+                android:id="@+id/linearlayout_title_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <TextView
+                    android:id="@+id/textView_task_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    tool:text="Task Name"
+                    android:textSize="21sp"
+                    android:textColor="#000"/>
+
+                <TextView
+                    android:id="@+id/textView_list_task_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    tool:text="time"
+                    android:textColor="#000"/>
+            </LinearLayout>
+
+            <RadioGroup
+                android:id="@+id/radio_group_subtasks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tool:text="Task Name"
-                android:textSize="21sp"
-                android:textColor="#000"/>
+                android:layout_below="@+id/linearlayout_title_time"
+                android:layout_marginStart="25dp">
 
-            <TextView
-                android:id="@+id/textView_utilized_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="40dp"
-                android:text="@string/time_remained"
-                android:textColor="#000"/>
-
-            <TextView
-                android:id="@+id/textView_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                tool:text="time"
-                android:textColor="#000"/>
-
-            <TextView
-                android:id="@+id/textView_task_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_task_name"
-                android:layout_marginTop="5dp"
-                tool:text="description"
-                android:textSize="16sp"
-                android:textColor="#000"/>
-
-
-            <TextView
-                android:id="@+id/textView_contributors"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/textView_task_description"
-                android:layout_below="@+id/textView_task_name"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                tool:text="contributors"
-                android:textSize="16sp"
-                android:textColor="#000"/>
+                <ListView
+                    android:id="@+id/listView_subtask"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp" />
+            </RadioGroup>
 
             <TextView
                 android:id="@+id/textView_contributors_tags"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/textView_contributors"
-                android:layout_below="@+id/textView_task_name"
-                android:layout_marginStart="10dp"
+                android:layout_below="@+id/radio_group_subtasks"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:padding="5dp"
                 android:background="@drawable/wireframe_background"
                 tool:text="benard"
                 android:textColor="#000"
-                android:textSize="16sp"/>
+                android:textSize="12sp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
