--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme2TaskApp" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme2TaskApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorBlueLighter</item>
         <item name="colorPrimaryDark">@color/colorBlueDark</item>
