--- a/app/src/main/res/layout/activity_added_tasks.xml
+++ b/app/src/main/res/layout/activity_added_tasks.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RoomDatabase.AddedTasks">
+    tools:context=".addtask.AddedTasks">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
