--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -1,46 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tool="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tool="http://schemas.android.com/apk/res-auto">
+    tools:context=".tasklist.ListTaskActivity"
+    android:orientation="vertical">
 
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout_search_box"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/wireframe_background">
-
-        <ImageView
+        android:layout_height="70dp"
+        android:background="@drawable/toolbar_bg"
+        android:elevation="8dp">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/ic_action_search"
-            android:contentDescription="Search Icon"/>
+            android:layout_marginTop="15dp"
+            android:text="@string/tasks"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:textColor="#fff"
+            android:id="@+id/title"
+            android:textSize="20sp"
+            android:textStyle="normal" />
+    </android.support.v7.widget.Toolbar>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:inputType="text"
-            android:hint="@string/search"/>
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/textView_error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/relativeLayout_search_box"
-        tools:text="Error"/>
-
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/relativeLayout_search_box" />
-</RelativeLayout>
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/relativeLayout_search_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/wireframe_background">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/ic_action_search"
+                    android:contentDescription="Search Icon"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:inputType="text"
+                    android:hint="@string/search"/>
+            </RelativeLayout>
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relativeLayout_search_box"/>
+
+            <Button
+                android:id="@+id/button_add_task"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/fragment_container"
+                android:paddingStart="7dp"
+                android:paddingEnd="7dp"
+                android:drawableStart="@drawable/ic_add_24dp"
+                android:drawablePadding="15dp"
+                android:gravity="start|center"
+                android:text="@string/add_task"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:background="@drawable/rounded_background"
+                android:elevation="16dp"/>
+        </RelativeLayout>
+    </ScrollView>
+</LinearLayout>
