--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlueLighter">#0E3252</color>
     <color name="colorGreyBackground">#dfdfdf</color>
     <color name="colorAccentDark">#BB3B6E</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
